force-app/main/default/objects/Document__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>