force-app/main/default/objects/Document__c/fields/CBM__c.field-meta.xml
<CustomField>
    <fullName>CBM__c</fullName>
    <formula>IF(ISBLANK(FTMSSO__c) = FALSE, FTMSSO__r.MeasurementTotalCBM__c,  AdvancedShipment__r.MeasurementCBM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>