force-app/main/default/objects/Document__c/fields/ContainerNoSealNo__c.field-meta.xml
<CustomField>
    <fullName>ContainerNoSealNo__c</fullName>
    <label>Container No/ Seal No</label>
    <type>TextArea</type>
</CustomField>