force-app/main/default/objects/Document__c/fields/ContSeal__c.field-meta.xml
<CustomField>
    <fullName>ContSeal__c</fullName>
    <formula>ContainerNoSealNo__c</formula>
    <label>Cont/Seal</label>
    <type>Text</type>
</CustomField>