force-app/main/default/objects/Document__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>IF( DocumentsDetails__r.CurrencySelling__c = &quot;USD&quot;,&quot;USD&quot;,&quot;VND&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>