force-app/main/default/objects/Document__c/fields/Dest__c.field-meta.xml
<CustomField>
    <fullName>Dest__c</fullName>
    <formula>IF(ISBLANK(FTMSSO__c) = FALSE, FTMSSO__r.FinalDestinationsDetailInformation__c,  AdvancedShipment__r.FinalDestination__r.Name )</formula>
    <label>Dest.</label>
    <type>Text</type>
</CustomField>