force-app/main/default/objects/Document__c/fields/DocumentsDetails__c.field-meta.xml
<CustomField>
    <fullName>DocumentsDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documents Details</label>
    <referenceTo>Documentsdetails__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>