force-app/main/default/objects/Document__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <formula>FTMSSO__r.ETD__c</formula>
    <label>ETD</label>
    <type>Date</type>
</CustomField>