force-app/main/default/objects/Document__c/fields/ExchangeRateFCY__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateFCY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exchange Rate (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>