force-app/main/default/objects/Document__c/fields/GW__c.field-meta.xml
<CustomField>
    <fullName>GW__c</fullName>
    <formula>IF(ISBLANK(FTMSSO__c) = FALSE, FTMSSO__r.GrossWeight__c, AdvancedShipment__r.GrossWeight__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G.W</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>