force-app/main/default/objects/Document__c/fields/HBLNo__c.field-meta.xml
<CustomField>
    <fullName>HBLNo__c</fullName>
    <formula>if(ISNULL(FTMSSO__r.HBLNumber__c)=true,  FTMSSO__r.HAWBNumber__c, FTMSSO__r.HBLNumber__c)</formula>
    <label>H-B/L No</label>
    <type>Text</type>
</CustomField>