force-app/main/default/objects/Document__c/fields/JobreferenceNo__c.field-meta.xml
<CustomField>
    <fullName>JobreferenceNo__c</fullName>
    <formula>FTMSSO__r.JobRequestID__c</formula>
    <label>Job reference No</label>
    <type>Text</type>
</CustomField>