force-app/main/default/objects/Document__c/fields/MBLNo__c.field-meta.xml
<CustomField>
    <fullName>MBLNo__c</fullName>
    <formula>FTMSSO__r.MBLNumber__c</formula>
    <label>M-B/L No.</label>
    <type>Text</type>
</CustomField>