force-app/main/default/objects/Document__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>IF(ISBLANK(FTMSSO__c) = FALSE, FTMSSO__r.PlaceofReceiptDetailInformation__c,  AdvancedShipment__r.PlaceofReceipt__r.Name )</formula>
    <label>Origin</label>
    <type>Text</type>
</CustomField>