force-app/main/default/objects/Document__c/fields/QtyCTNS__c.field-meta.xml
<CustomField>
    <fullName>QtyCTNS__c</fullName>
    <formula>IF(FTMSSO__r.ContainerQuantity1__c&lt;10,&quot;0&quot;&amp;TEXT(FTMSSO__r.ContainerQuantity1__c)&amp;&quot;X&quot;&amp;TEXT(FTMSSO__r.ContainerType1__c),
    TEXT(FTMSSO__r.ContainerQuantity1__c)&amp;&quot;X&quot;&amp;TEXT(FTMSSO__r.ContainerType1__c))
&amp;&quot;(&quot;
&amp; TEXT(FTMSSO__r.CargoQuantity__c)
&amp;&quot; &quot;
&amp; IF(FTMSSO__r.CargoQuantity__c=1,TEXT(FTMSSO__r.CargoUnit__c),FTMSSO__r.Plural_Cargo_Unit__c)
&amp;&quot;)&quot;</formula>
    <label>Qty/CTNS</label>
    <type>Text</type>
</CustomField>