force-app/main/default/objects/Document__c/fields/TotalBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxFCY__c</fullName>
    <label>Total Buying Incl Tax (USD)</label>
    <summarizedField>Documentsdetails__c.TotalBuyingInclTaxFCY__c</summarizedField>
    <summaryForeignKey>Documentsdetails__c.Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>