force-app/main/default/objects/Document__c/fields/TotalBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxLocal__c</fullName>
    <label>Total Buying Incl Tax (VND)</label>
    <summarizedField>Documentsdetails__c.TotalBuyingInclTaxLocal__c</summarizedField>
    <summaryForeignKey>Documentsdetails__c.Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>