force-app/main/default/objects/Document__c/fields/TotalSellingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxFCY__c</fullName>
    <label>Total Selling Incl Tax (USD)</label>
    <summarizedField>Documentsdetails__c.Total_Selling_Incl_Tax_FCY__c</summarizedField>
    <summaryForeignKey>Documentsdetails__c.Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>