force-app/main/default/objects/Document__c/fields/TotalSellingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxLocal__c</fullName>
    <label>Total Selling Incl Tax (VND)</label>
    <summarizedField>Documentsdetails__c.Total_Selling_Incl_Tax_Local__c</summarizedField>
    <summaryForeignKey>Documentsdetails__c.Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>