force-app/main/default/objects/Document__c/fields/VesselVoy__c.field-meta.xml
<CustomField>
    <fullName>VesselVoy__c</fullName>
    <formula>FTMSSO__r.VesselFlight__c &amp;&quot; &quot;&amp;FTMSSO__r.Voyage__c</formula>
    <label>Vessel/Voy</label>
    <type>Text</type>
</CustomField>