force-app/main/default/objects/Document__c/recordTypes/Credit_Note.recordType-meta.xml
<RecordType>
    <fullName>Credit_Note</fullName>
    <active>true</active>
    <label>Credit Note</label>
</RecordType>