force-app/main/default/objects/Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>FTMSSO__c</columns>
    <columns>AdvancedShipment__c</columns>
    <columns>Billto__c</columns>
    <columns>BankAccount__c</columns>
    <columns>TotalBuyingInclTaxFCY__c</columns>
    <columns>TotalBuyingInclTaxLocal__c</columns>
    <columns>TotalSellingInclTaxFCY__c</columns>
    <columns>TotalSellingInclTaxLocal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>